[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RsInstrument"
version = "1.110.0"
license="MIT"
description="VISA or Socket Communication Module for Rohde & Schwarz Instruments"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = ["RsInstrument", "VISA", "RohdeSchwarz"]
authors = [{name = "Rohde & Schwarz GmbH & Co. KG"}]
maintainers = [{name = "Rohde & Schwarz GmbH & Co. KG"}]
	
requires-python = ">= 3.8"
dependencies = [
		"pyvisa>=1.13.0",
		"typing-extensions>=4.0.0"
	]

classifiers = [
	  # How mature is this project? Common values are
	  #   4 - Beta
	  #   5 - Production/Stable
	  "Development Status :: 5 - Production/Stable",

	  # Indicate who your project is intended for
	  "Intended Audience :: Developers",

	  # Specify the Python versions you support here.
	  "Programming Language :: Python :: 3",
	  "Programming Language :: Python :: 3.8",
	  "Programming Language :: Python :: 3.9",
	  "Programming Language :: Python :: 3.10",
	  "Programming Language :: Python :: 3.11",
	  "Programming Language :: Python :: 3.12",
	  "Programming Language :: Python :: 3.13",
	]
	
[tool.setuptools.package-dir]
RsInstrument = "RsInstrument"

[project.urls]
Documentation = "https://rsinstrument.readthedocs.io/"
Examples = "https://github.com/Rohde-Schwarz/Examples/"
Repository = "https://github.com/Rohde-Schwarz/RsInstrument"